<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnMode1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/button_background_primary"
        android:text="@string/mode_1"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnMode2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMode1"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/button_background_primary"
        android:text="@string/mode_2"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnMode3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMode2"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/button_background_primary"
        android:text="@string/mode_3"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnMode4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMode3"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/button_background_primary"
        android:text="@string/mode_4"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/button_background_accent"
        android:text="@string/disconnect"
        android:textColor="#fff" />

</RelativeLayout>